--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -1,213 +1,66 @@
 <div class="container pt-3">
-  <div class="row my-3">
-      <div class="mx-auto text-center"><h1>Hi, Thuy Nguyen</h1>
-      <h5 class="p-3">Please fill in the form below to get your quote done</h5></div>
-  </div>
-  <div class="row">
-    <div class="col">
-        <div class="tab-content">
-          <div class="tab-pane active" id="home">
-              <hr>
-                <form id="quote_form" class="form" action="##" method="post">
-                    <div class="form-group">
-                        <div class="row">
-                          <div class="col-4">
-                            <label for="gallon_request"><h4>Gallons Request</h4></label>
-                            <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Enter amount of gallons" title="enter your last name if any.">
-                          </div>
-                        <div class="col-4">
-                        </div>
-                        <div class="col-4"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                        <div class="col-8">
-                            <label for="delivery_address"><h4>Delivery Address</h4></label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="1245 Main Street Houston TX 77070">
-                        </div>
-                        <div class="col-4">
-                          <label for="delivery_date"><h4>Delivery Date</h4></label>
-                          <input type="date" id="start" name="trip-start" min="2020-03-20" max="2020-12-31">
-                        </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                    <div class="row">
-                      <div class="col-3">
-                        <label for="suggested_price"><h4>Suggested Price</h4></label>
-                        <input type="number" class="form-control" name="phone" id="phone" placeholder="1220$">
-                      </div>
-                      <div class="col-10"></div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="row">
-                      <div class="col-3">
-                        <label for="suggested_price"><h4>Total Amount Due</h4></label>
-                        <input type="number" class="form-control" name="phone" id="phone" placeholder="1220$">
-                      </div>
-                      <div class="col-10"></div>
-                    </div>
-                  </div>
-                    <div class="form-group">
-                         <div class="col-12">
-                              <br>
-                              <button class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Submit</button>
-                               <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                          </div>
-                    </div>
-              </form>
-            
-            <hr>
-            
-           </div><!--/tab-pane-->
-           <div class="tab-pane" id="messages">
-             
-             <h2></h2>
-             
-             <hr>
-                <form class="form" action="##" method="post" id="registrationForm">
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="first_name"><h4>First name</h4></label>
-                            <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                          <label for="last_name"><h4>Last name</h4></label>
-                            <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
-                        </div>
-                    </div>
-        
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="phone"><h4>Phone</h4></label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
-                        </div>
-                    </div>
-        
-                    <div class="form-group">
-                        <div class="col-xs-6">
-                           <label for="mobile"><h4>Mobile</h4></label>
-                            <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Email</h4></label>
-                            <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Location</h4></label>
-                            <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="password"><h4>Password</h4></label>
-                            <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                          <label for="password2"><h4>Verify</h4></label>
-                            <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                         <div class="col-xs-12">
-                              <br>
-                              <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                               <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                          </div>
-                    </div>
-              </form>
-             
-           </div><!--/tab-pane-->
-           <div class="tab-pane" id="settings">
+    <div class="row my-3">
+        <div class="mx-auto text-center"><h1>Hi, Thuy Nguyen</h1>
+        <h5 class="p-3">Please fill in the form below to get your quote done</h5></div>
+    </div>
+    <div class="row">
+      <div class="col">
+          <div class="tab-content">
+            <div class="tab-pane active" id="home">
                 <hr>
-                <form class="form" action="##" method="post" id="registrationForm">
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="first_name"><h4>First name</h4></label>
-                            <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                          <label for="last_name"><h4>Last name</h4></label>
-                            <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
-                        </div>
-                    </div>
-        
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="phone"><h4>Phone</h4></label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
-                        </div>
-                    </div>
-        
-                    <div class="form-group">
-                        <div class="col-xs-6">
-                           <label for="mobile"><h4>Mobile</h4></label>
-                            <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Email</h4></label>
-                            <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Location</h4></label>
-                            <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="password"><h4>Password</h4></label>
-                            <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                          <label for="password2"><h4>Verify</h4></label>
-                            <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                         <div class="col-xs-12">
-                              <br>
-                              <button class="btn btn-lg btn-success pull-right" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                               <!--<button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>-->
-                          </div>
-                    </div>
-              </form>
-            </div>
-             
-            </div><!--/tab-pane-->
-        </div><!--/tab-content-->
+                  <form id="quote_form" class="form" action="##" method="post">
 
-      </div><!--/col-9-->
-  </div><!--/row-->
-                                                    
+                      <div class="form-group">
+                          <div class="row">
+                            <div class="col-4">
+                              <label for="gallon_request"><h4>Gallons Request</h4></label>
+                              <input [(ngModel)]="gallon" (click)="cal()" type="number" class="form-control" name="gallon_request" id="gallon_request" placeholder="Enter amount of gallons" title="gallon_request" required>
+                            </div>
+                          <div class="col-4">
+                          </div>
+                          <div class="col-4"></div>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <div class="row">
+                          <div class="col-8">
+                              <label for="delivery_address"><h4>Delivery Address</h4></label>
+                              <input readonly type="text" class="form-control" name="delivery_address" id="delivery_address" placeholder="1245 Main Street Houston TX 77070">
+                          </div>
+                          <div class="col-4">
+                            <label for="delivery_date"><h4>Delivery Date</h4></label>
+                            <input type="date" id="delivery_date" name="delivery_date" min="2020-03-20" max="2020-12-31" required>
+                          </div>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                      <div class="row">
+                        <div class="col-3">
+                          <label for="suggested_price"><h4>Suggested Price</h4></label>
+                          <input readonly [(ngModel)]="price" type="number" class="form-control" name="suggested_price" id="suggested_price" placeholder="1220$">
+                        </div>
+                        <div class="col-10"></div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="row">
+                        <div class="col-3">
+                          <label for="total_price"><h4>Total Amount Due</h4></label>
+                          {{cal()}}
+                          <output align="left" type="number" class="form-control" name="total_price" id="total_price" >{{total}}</output>
+                        </div>
+                        <div class="col-10"></div>
+                      </div>
+                    </div>
+                      <div class="form-group">
+                           <div class="col-12">
+                                <br>
+                                <button class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Submit</button>
+                                 <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                            </div>
+                      </div>
+                </form>
+              
+            
+        </div><!--/col-9-->
+    </div><!--/row-->
