--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -7,9 +7,8 @@
       <div class="col">
           <div class="tab-content">
             <div class="tab-pane active" id="home">
-                <hr>
-                  <form #quoteForm ="ngForm" id="quote_form" class="form" (ngSubmit)="getQuote()">
-
+                <hr>                    
+                <form #quoteForm ="ngForm" id="quote_form" class="form" (ngSubmit)="onSubmit(buttonType)">
                       <div class="form-group">
                           <div class="row">
                             <div class="col-4">
@@ -54,7 +53,8 @@
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                                <button [disabled]="!quoteForm.valid" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Quote</button>
+                                <button [disabled]="!quoteForm.valid" class="btn btn-lg btn-success mx-2" type="submit" (click)="onSubmit('GetPrice')"><i class="glyphicon glyphicon-ok-sign"></i> Get Price</button>
+                                <button [disabled]="!quoteForm.valid" class="btn btn-lg btn-success mx-2" type="submit" (click)="onSubmit('SaveQuote')"><i class="glyphicon glyphicon-ok-sign"></i> Submit</button>
                                  <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
                       </div>
